--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="ahirose.github.io : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/anim.css">
 
     <title>ahirose.github.io</title>
   </head>
